WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91503
Inspector crashes when trying to inspect a page with CSS region styling
https://bugs.webkit.org/show_bug.cgi?id=91503
Summary
Inspector crashes when trying to inspect a page with CSS region styling
Raul Hudea
Reported
2012-07-17 08:54:57 PDT
Trying to inspect any LayoutTest with region styling crashes. Might be related to
http://trac.webkit.org/changeset/121551
(Web Inspector: Provide source data for all known rule types in CSSParser, except "keyframe" and "region")
Attachments
patch
(6.39 KB, patch)
2012-07-18 05:17 PDT
,
Raul Hudea
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-01
(580.87 KB, application/zip)
2012-07-18 05:50 PDT
,
WebKit Review Bot
no flags
Details
New patch
(6.81 KB, patch)
2012-07-20 08:06 PDT
,
Raul Hudea
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from gce-cr-linux-05
(295.46 KB, application/zip)
2012-07-20 09:45 PDT
,
WebKit Review Bot
no flags
Details
New patch. Chromium is skipped
(7.54 KB, patch)
2012-07-24 09:20 PDT
,
Raul Hudea
no flags
Details
Formatted Diff
Diff
remove extra change
(8.39 KB, patch)
2012-07-31 02:07 PDT
,
Raul Hudea
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Raul Hudea
Comment 1
2012-07-18 05:17:21 PDT
Created
attachment 152992
[details]
patch
WebKit Review Bot
Comment 2
2012-07-18 05:50:30 PDT
Comment on
attachment 152992
[details]
patch
Attachment 152992
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13269511
New failing tests: inspector/styles/region-style-crash.html
WebKit Review Bot
Comment 3
2012-07-18 05:50:33 PDT
Created
attachment 152999
[details]
Archive of layout-test-results from gce-cr-linux-01 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Raul Hudea
Comment 4
2012-07-20 08:06:01 PDT
Created
attachment 153505
[details]
New patch
WebKit Review Bot
Comment 5
2012-07-20 09:45:09 PDT
Comment on
attachment 153505
[details]
New patch
Attachment 153505
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13303382
New failing tests: inspector/styles/region-style-crash.html
WebKit Review Bot
Comment 6
2012-07-20 09:45:13 PDT
Created
attachment 153527
[details]
Archive of layout-test-results from gce-cr-linux-05 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-05 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Raul Hudea
Comment 7
2012-07-24 09:20:56 PDT
Created
attachment 154083
[details]
New patch. Chromium is skipped
Raul Hudea
Comment 8
2012-07-31 02:07:32 PDT
Created
attachment 155469
[details]
remove extra change
WebKit Review Bot
Comment 9
2012-07-31 03:09:01 PDT
Comment on
attachment 155469
[details]
remove extra change Clearing flags on attachment: 155469 Committed
r124186
: <
http://trac.webkit.org/changeset/124186
>
WebKit Review Bot
Comment 10
2012-07-31 03:09:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug