Inspector crashes when trying to inspect a page with CSS region styling https://bugs.webkit.org/show_bug.cgi?id=91503

Patch by Raul Hudea <rhudea@adobe.com> on 2012-07-31
Reviewed by Alexander Pavlov.

Source/WebCore:

Fix by making sure a CSSRuleSourceData is always created when parsing @-webkit-region rules.

Test: inspector/styles/region-style-crash.html

* css/CSSGrammar.y: Made ruleset called explicitly markRuleBodyStart instead of depending on updateLastSelectorLineAndPosition to call it.
* css/CSSParser.cpp:
(WebCore::CSSParser::updateLastSelectorLineAndPosition): markRuleBodyStart should be called via at_rule_body_start.
* css/CSSPropertySourceData.h:

LayoutTests:

Test to make sure inspector is not crashing when having to parse @-webkit-region rules

* inspector/styles/region-style-crash-expected.txt: Added.
* inspector/styles/region-style-crash.html: Added.
* platform/chromium/TestExpectations:

Canonical link: https://commits.webkit.org/110561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124186 268f45cc-cd09-0410-ab3c-d52691b4dbfc